# keyage

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  bacon.toml  flake.nix  test.key.txt
.local/share/keyage-store/: config.toml
docs/: about.txt  long_about.txt
nix/: formatters.nix  keyage.nix  shell.nix
src/: error.rs  lib.rs  main.rs
